--- a/question_retrieval.ipynb
+++ b/question_retrieval.ipynb
@@ -117,7 +117,8 @@
    "source": [
     "faiss document store에 embedding을 update\n",
     "- Colab V100 기준 1시간 소요\n",
-    "- index를 저장해서 재사용하면 추후 사용이 편해진다."
+    "- index를 저장하면 재사용시 setting시간을 크게 줄인다.\n",
+    "    - `document_store = FAISSDocumentStore.load(faiss_file_path=\"my_faiss\", sql_url=\"sqlite:///faq.db\", index=\"document\")`"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -129,6 +130,15 @@
    "outputs": [],
    "source": [
     "document_store.update_embeddings(retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_store.save('my_faiss')"
    ]
   },
   {
@@ -180,6 +190,15 @@
     "                return result.meta['answer']\n",
     "    return 'no answer'\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_answer('베이징 올림픽은 언제 개막했어?')"
    ]
   }
  ]
